--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,8 @@
 name = "ppopgi-worker-cache"
 main = "src/index.ts"
 compatibility_date = "2025-01-01"
+
+[observability]
+[observability.logs]
+enabled = true
+invocation_logs = true
